# ibl-ai-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_DATA.md  README.md  data_locations.example.yaml  justfile  pyproject.toml
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  agent_corrections.md  data_locations.md  skills.md  workflow.md
docs/ask/: ASK_EXPERIMENTAL.md  ASK_RELIABILITY_HARDENING_PLAN.md  ASK_RUNTIME.md  example_manifest.yaml  plan_payload_template.yaml  region_aliases.yaml
docs/bwm/: README.md  behavior.md  ephys.md
docs/decisions/: bwm_dataset_layering.md  bwm_ephys_spike_encoding.md
ibl_ai_agent/: __init__.py  cli.py  data_locations.py  errors.py  io.py  notebook_open.py  report_publish.py
ibl_ai_agent/ask/: __init__.py  constants.py  notebook.py  orchestrator.py  plan_tools.py  templates.py  validation.py
ibl_ai_agent/commands/: access_commands.py  ask_commands.py  (+5 more)
scripts/: ask_and_open_notebook.sh  ask_draft_and_open_notebook.sh  download_datasets.py  report_skill_sizes.py  validate_bwm_ephys_release.py
skills/: SOURCES.md
tests/: ask_test_utils.py  test_access.py  test_ask.py  test_ask_contracts.py  test_ask_runtime_guard.py  test_auth_strict_mode.py  test_bwm_behavior_dataset.py  test_bwm_ephys_dataset.py  test_bwm_ephys_release_validation.py  test_bwm_simple_dataset.py  test_clean_runs.py  test_data_locations.py  test_doctor.py  test_download_datasets.py  test_envfile.py  test_notebook_backend_probe.py  test_notebook_open.py  test_plan_cli.py  test_report_publish.py  test_skill_references.py
(+75 files in other folders)
