[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibl-ai-agent"
version = "0.1.0"
description = "Skill-first Codex agent for IBL neural data analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "matplotlib>=3.10.8",
  "zarr>=2.18",
  "brainwidemap",
  "boto3>=1.34",
]

[project.optional-dependencies]
ibl = [
  "ONE-api>=3.0",
  "ibllib>=3.3",
  "brainbox<=0.0.9",
]
notebook = [
  "jupyter>=1.1",
  "jupyter-mcp-server>=0.1",
  "nbclient>=0.10.4",
  "nbformat>=5.10.4",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
ibl-ai-agent = "ibl_ai_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ibl_ai_agent*"]

[tool.setuptools.package-data]
"ibl_ai_agent.ask" = ["template_assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
constraint-dependencies = [
  "PyQt5-Qt5==5.15.2; sys_platform == 'win32'",
]

[tool.uv.sources]
brainwidemap = { git = "https://github.com/int-brain-lab/paper-brain-wide-map.git", rev = "de37454426bc4107047b5a18b854fc1ef7a5959c" }

[dependency-groups]
dev = [
    "jupyter-collaboration>=4.2.1",
]
